[package]
name = "rust-folio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.160"
serde_json = "1.0.96"
stylist = { version = "0.12.0", features = ["yew", "parser", "yew_integration"] }
yew = { version = "^0.20", features = ["csr"] }
